--- a/Login_Registro/.classpath
+++ b/Login_Registro/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/krip1/Downloads/json-20240303.jar"/>
+	<classpathentry kind="lib" path="C:/Users/krip1/Downloads/jackson-core-2.17.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
